frontend/src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;
@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&family=Permanent+Marker&display=swap');

@layer base {
  .main {
    left: 0;
    top: 0;
    height: 100vh;
    width: 100vw;
    font-family: 'Inter', 'sans-serif';

  }
}

@layer components {

  #navbar a {
    @apply py-7 overflow-hidden px-2 text-center hover:drop-shadow-sm duration-100
  }

  #navbar a, #navbar p {
    @apply text-gray-400;
  }

  .green-button {
    @apply rounded-lg bg-green-500 px-16 py-4 text-white w-64 hover:underline my-8;
  }

  h1 {
    @apply text-4xl font-bold;
  }

  h2 {
    @apply text-2xl font-bold;
  }

  h3 {
    @apply text-lg font-bold;
  }

  .input1 {
    @apply w-72 border-b-2 border-black my-8 focus:border-green-500
      py-4 px-8 hover:bg-gray-100 focus:bg-gray-100 focus:outline-none duration-100;
  }

  table {
    @apply w-full;
  }

  th, td {
    @apply border-collapse border-solid border-2 border-green-400 px-4 py-2
      ;
  }

  .item {
    @apply w-1/2;
  }

}

